--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,9 +21,11 @@ en:
               blank: "can't be blank"
   common:
     confirm: 'Are you sure?'
+    back: 'Go back'
   shared:
     header:
       add: 'Add product'
+      categories: 'Categories'
   products:
     edit:
       title: 'Edit product'
@@ -40,3 +42,20 @@ en:
       updated: 'Your product has been successfully updated'
     destroy:
       destroyed: 'Your product has been successfully destroyed'
+  categories:
+    category:
+      edit: 'Edit'
+      delete: 'Delete'
+    index:
+      title: 'Categories'
+      new: 'Add category'
+    edit:
+      title: 'Edit category'
+    new: 
+      title: 'New category'
+    create:
+      created: 'Your category has been successfully created'
+    update:
+      updated: 'Your category has been successfully updated'
+    destroy:
+      destroyed: 'Your category has been successfully deleted'
