Relacionando productos con categorias

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,7 @@ en:
         title: 'Title'
         description: 'Description'
         price: 'Price'
+        category_id: 'Category'
         photo: 'Photo'
     errors:
       models:
