--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -7,6 +7,7 @@ es:
         title: 'Titulo'
         description: 'Descripcion'
         price: 'Precio'
+        category_id: 'Categoria'
         photo: 'Foto'
     errors:
       models:
