--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,7 @@ en:
       title: 'Add product'
     index:
       title: 'Products:'
+      all: 'All'
     show:
       edit: 'Edit product'
       delete: 'Delete product'
