--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -30,6 +30,8 @@ es:
     index:
       title: 'Productos'
       all: 'Todos'
+      min_price: 'Precio minimo'
+      max_price: 'Precio maximo'
     new:
       title: 'Añadir producto'
     create:
